# talk-meetup-bcn-2019

./: .gitignore  README.md
docs/: .gitignore  bcn.txt  index.html
docs/css/: custom.css
docs/html/: helloapp01.html  opencv.html  tw-post-image.html
examples/: opencv.html  tw-post-image.html
examples/helloapp/: CMakeLists.txt  conanfile.txt  main.cpp
examples/hellolib/0.1/: CMakeLists.txt  README.md  conanfile.py
examples/hellolib/0.1/include/hellolib/: hello.h
examples/hellolib/0.1/src/: hello.cpp
examples/hellolib/1.0/: README.md  conanfile.py
examples/hellolib/1.0/include/hellolib/: hello.h
examples/hellolib/1.0/src/: hello.cpp
examples/opencv/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
examples/tw-post/: CMakeLists.txt  README.md  main.cpp
examples/tw-post-image/: CMakeLists.txt  README.md  base64.c  base64.h  conanfile.txt  main.cpp
